--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "types": "dist/index.d.ts",
   "exports": {
     ".": {
-      "import": "./dist/index.cjs",
+      "import": "./dist/index.mjs",
       "types": "./dist/index.d.mts"
     }
   },
