--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "homepage": "https://github.com/peakercope/rspack-svg-sprite-loader-plugin",
   "repository": {
     "type": "git",
-    "url": "https://github.com/peakercope/rspack-svg-sprite-loader-plugin.git"
+    "url": "git+https://github.com/peakercope/rspack-svg-sprite-loader-plugin.git"
   },
   "keywords": [
     "rspack",
