--- a/package.json
+++ b/package.json
@@ -37,8 +37,8 @@
     "test": "vitest run",
     "test:watch": "vitest",
     "changelog": "git-cliff --config ./scripts/git-cliff.toml --output CHANGELOG.md",
-    "publish": "np",
-    "publish:all": "npm run build && npm run publish"
+    "release": "np",
+    "release:all": "npm run build && npm run publish"
   },
   "devDependencies": {
     "@biomejs/biome": "2.3.15",
