--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "README.md",
     "CHANGELOG.md"
   ],
-  "types": "dist/index.d.ts",
+  "main": "./dist/index.mjs",
+  "types": "dist/index.d.mts",
   "exports": {
     ".": {
       "import": "./dist/index.mjs",
