--- a/package.json
+++ b/package.json
@@ -23,10 +23,11 @@
     "CHANGELOG.md"
   ],
   "main": "./dist/index.mjs",
-  "types": "dist/index.d.mts",
+  "types": "./dist/index.d.mts",
   "exports": {
     ".": {
       "import": "./dist/index.mjs",
+      "require": "./dist/index.cjs",
       "types": "./dist/index.d.mts"
     }
   },
